<resources>
    <string name="app_name">Compartamos Viaje</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <!--Strings for Manifest-->
    <string name="title_ruleta">Ruleta</string>

    <!--Strings for MainDrawer-->
    <string name="perfil">Mi Perfil</string>
    <string name="noti">Noticias</string>
    <string name="explorar">Explorar</string>
    <string name="promociones">Promociones</string>
    <string name="pagos">Pagos</string>
    <string name="ruleta">Ruleta</string>
    <string name="compartir">Compartir</string>
    <string name="acerca">Acerca De</string>
    <string name="cerrar">Cerrar Sesión</string>
    <string name="clima">Clima</string>
    <string name="descubrir">Descubre</string>

    <!--Strings for Nav_Header_Main-->
    <string name="saludo">Bienvenido</string>
    <string name="correo">ganlensystems@icloud.com</string>

    <!--Strings for Perfil-->
    <string name="name">Helena López</string>
    <string name="address">Condesa #298</string>
    <string name="from">Ciudad de México</string>
    <string name="compras">Mis compras</string>

    <!--Strings for Acerca De-->
    <string name="raul">Raúl De León</string>
    <string name="david">David Quintero</string>
    <string name="efrain">Efraín Lira</string>
    <string name="dulce">Dulce Paz</string>
    <string name="fernando">Fernando Veladiz</string>
    <string name="bryan">Bryan Rodríguez</string>
    <string name="copyright">© Copyright 2018 Ganlen Systems</string>
    <string name="website">ganlensystems.github.io</string>
    <string name="email_gan">ganlensystems@icloud.com</string>
    <string name="obj_title">Nuestro Objetivo</string>
    <string name="team_title">Nuestro Equipo</string>
    <string name="web_title">Visítanos en</string>
    <string name="obj_text">Facilitar la vida de las personas en todas las industrias mediante innovadores productos de
        Cloud Computing de alta calidad para así también reducir la brecha tecnológica en los países de América Latina
        y países de tercer mundo.</string>

    <!--Strings for Ruleta-->
    <string name="pregunta">¿Qué se te antoja hoy?</string>
    <string-array name="predefined">
        <item>4 Hamburguesas con queso + 4 papas Kids por $109</item>
        <item>Pizzas a $99 y Cerveza a $54</item>
        <item>2x1 en rollos a partir de las 5pm</item>
        <item>Whopper Jr + Papas + Refresco + Sunday Jr</item>
        <item>2 o 4 crepas de tres o más ingredientes por $300</item>
        <item>Para 2 o 4 entrada, principal, postre y botella de vino</item>
        <item>Steakburgers dobles para 2 personas con patatas fritas</item>
    </string-array>

    <!--section news-->
    <string name="title_unam">UNAM - Universidad Autonoma de México</string>
    <string name="facebook_app_id">191753144750075</string>

    <!--Strings for Login-->
    <string name="action_sign_in_short">Registrar</string>
    <string name="email">Email</string>
    <string name="minimum_password">Contraseña demasiado corta, ingrese un mínimo de 6 caracteres!</string>
    <string name="auth_failed">Autentificación fallida, verifique su correo electrónico y contraseña o regístrese</string>
    <string name="change_email">Cambiar Email</string>
    <string name="change_password">Cambiar Contraseña</string>
    <string name="send_password_reset_email">Enviar correo de Restablecimiento de contraseña</string>
    <string name="remove_user">Eliminar Usuario</string>
    <string name="new_pass">Nueva Contraseña</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Registrarse</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_name">Nombre completo</string>
    <string name="btn_login">Iniciar sesión</string>
    <string name="prompt_password">Por favor, introduzca su contraseña</string>
    <string name="btn_link_to_register">¿No eres miembro? ¡Regístrese ahora!</string>
    <string name="btn_link_to_login">Ya registrado. ¡Iniciar sesión!</string>
    <string name="title_activity_reset_password">Restablecer Contraseña</string>
    <string name="btn_forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="btn_reset_password">Restablecer contraseña</string>
    <string name="btn_back"><![CDATA[<< Regresar]]></string>
    <string name="hint_new_email">Nuevo Email</string>
    <string name="btn_change">Cambiar</string>
    <string name="btn_send">Enviar</string>
    <string name="btn_remove">Eliminar</string>
    <string name="btn_sign_out">Cerrar sesión</string>
    <string name="lbl_forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="forgot_password_msg">Solo necesitamos tu email registrado para enviarte instrucciones de Restablecimiento de contraseña.</string>
    <string name="email_id">Email</string>
</resources>