<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_perfil"
            android:title="@string/perfil" />
        <item
            android:id="@+id/nav_clima"
            android:icon="@drawable/ic_clima"
            android:title="@string/clima" />
        <item
            android:id="@+id/nav_noticias"
            android:icon="@drawable/ic_news"
            android:title="@string/noti" />
        <item
            android:id="@+id/nav_descubrir"
            android:icon="@drawable/ic_explorar"
            android:title="@string/descubrir" />
        <item
            android:id="@+id/nav_explorar"
            android:icon="@drawable/ic_maps"
            android:title="@string/explorar" />
        <item
            android:id="@+id/nav_promociones"
            android:icon="@drawable/ic_promo"
            android:title="@string/promociones" />
        <item
            android:id="@+id/nav_ruleta"
            android:icon="@drawable/ic_ruleta"
            android:title="@string/ruleta"/>
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/compartir" />
        <item
            android:id="@+id/nav_acerca"
            android:icon="@drawable/ic_acerca_de"
            android:title="@string/acerca"/>
        <item
            android:id="@+id/nav_cerrarSesion"
            android:icon="@drawable/ic_cerrar"
            android:title="@string/cerrar"/>
    </group>
</menu>