<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_marginTop="50dp"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:scaleType="centerInside"
            android:src="@drawable/logo_ganlen"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="49dp"
            android:src="@drawable/ic_separador2"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:scaleType="centerInside"
            android:text="@string/obj_title"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textColor="@color/colorPrimary"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/obj_text"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/colorBlanco"
            android:background="@color/colorPrimaryDark"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="49dp"
            android:src="@drawable/ic_separador2"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:scaleType="centerInside"
            android:text="@string/team_title"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textColor="@color/colorPrimary"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="@string/raul"
                android:textAlignment="center"
                android:textColor="@color/colorBlanco"
                android:textSize="16sp"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="@string/david"
                android:textAlignment="center"
                android:textColor="@color/colorBlanco"
                android:textSize="16sp"
                android:layout_marginRight="30dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="@string/efrain"
                android:textAlignment="center"
                android:textColor="@color/colorBlanco"
                android:textSize="16sp"
                android:layout_marginRight="10dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:text="@string/fernando"
                android:textAlignment="center"
                android:textColor="@color/colorBlanco"
                android:textSize="16sp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:text="@string/dulce"
                android:textAlignment="center"
                android:textColor="@color/colorBlanco"
                android:textSize="16sp"
                android:layout_marginRight="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:text="@string/bryan"
                android:textAlignment="center"
                android:textColor="@color/colorBlanco"
                android:textSize="16sp"
                android:layout_marginRight="10dp"/>
        </LinearLayout>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="49dp"
            android:src="@drawable/ic_separador2"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:scaleType="centerInside"
            android:text="@string/web_title"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textColor="@color/colorPrimary"/>
        <TextView
            android:text="@string/website"
            android:id="@+id/website_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:layout_marginBottom="8dp"
            android:autoLink="web"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="49dp"
            android:src="@drawable/ic_separador2"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:text="@string/copyright"
            android:textAlignment="center"
            android:textSize="12sp"
            android:layout_marginTop="10dp"/>

    </LinearLayout>
</ScrollView>